* ChangeLog:
  

* ChangeLog:
  

* DiscImageChef.csproj:
  Project file formatting.

2017-05-28  Natalia Portillo  <claunia@claunia.com>

	* Commands/DeviceReport.cs:
	  Refactor: Move device-report logic to Core and separate by
	  category.

2017-05-28  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaScan.cs:
	  Refactor: Return result from core to CLI, show in CLI.

2017-05-28  Natalia Portillo  <claunia@claunia.com>

	* Progress.cs:
	* DiscImageChef.csproj:
	* Commands/Benchmark.cs:
	* Commands/CreateSidecar.cs:
	  Refactor: Use delegates to report progress and status.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* Commands/Benchmark.cs:
	  Refactor: Return result from core to CLI, show in CLI.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* Commands/Benchmark.cs:
	  Refactor: Move benchmark to Core.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* Commands/CreateSidecar.cs:
	  Refactor: Move create-sidecar logic to Core.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* Commands/Ls.cs:
	* Commands/Analyze.cs:
	* Commands/ExtractFiles.cs:
	  Refactor: Move filesystem identification code to Core.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* Commands/DumpMedia.cs:
	* Commands/MediaInfo.cs:
	* Commands/DeviceInfo.cs:
	  Refactor: Move dumping code, and misc file writing code, to
	  Core.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* Commands/MediaScan.cs:
	  Refactor: Moved media scanning to Core.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* Commands/Compare.cs:
	  Refactor: Moved CompareBytes to Helpers.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* Commands/Checksum.cs:
	  Enabled option to set which checksums to use.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.csproj:
	* Commands/DumpMedia.cs:
	* Commands/MediaScan.cs:
	  Refactor: Move MHDDLog to Core.

2017-05-27  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.csproj: